# libusbi2c

./: CMakeLists.txt  README.md  config.h.in
include/usbi2c/: SC18IM700.h  config.h  usbi2c.h
src/: usbi2c_close.c  usbi2c_gpio_read.c  usbi2c_gpio_setmode.c  usbi2c_gpio_write.c  usbi2c_open.c  usbi2c_raw_read.c  usbi2c_raw_write.c  usbi2c_read.c  usbi2c_set_speed.c  usbi2c_write.c  usbi2c_writeread.c  usbi2c_writewrite.c
tools/: CMakeLists.txt
tools/gpio_test/: CMakeLists.txt
tools/gpio_test/src/: main.c
